[metadata]
name = {{ cookiecutter.project_slug }}
summary = {{ cookiecutter.project_short_description }}
description-file =
    README.rst
author = {{ cookiecutter.full_name }}
author-email = {{ cookiecutter.email }}
home-page = http://{{ cookiecutter.project_slug }}.readthedocs.io/
classifier =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    License :: OSI Approved :: {{ cookiecutter.license }}
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6

[files]
packages =
    {{ cookiecutter.project_slug }}
